--- a/style.css
+++ b/style.css
@@ -16,8 +16,14 @@
   transform: rotate(0deg);
 }
 
-.main-link:hover::before {
+.main-link:hover::before,
+.main-link.w--current::before {
   background-color: var(--black-brand);
   left: 24%;
   transform: rotate(225deg);
+}
+
+a.main-link.special:hover::before,
+a.main-link.special.w--current::before {
+  left: 20%;
 }
