--- a/style.css
+++ b/style.css
@@ -28,6 +28,6 @@ a.main-link.special.w--current::before {
   left: 20%;
 }
 
-.active-lang-indicator {
-  left: 16px;
+.weglot-link-it.active-lang-indicator {
+  left: 16px !important;
 }
