--- a/style.css
+++ b/style.css
@@ -29,8 +29,20 @@ a.main-link.special.w--current::before {
 }
 
 .active {
-  transform: translate3d(14px, 0px, 0px) !important;
+  animation-name: toggle-lang-it;
+  animation-duration: .2s;
+  animation-timing-function: ease-in-out;
   transform-style: preserve-3d !important;
+}
+
+@keyframes toggle-lang-it {
+  0% {
+    transform: translate3d(0px, 0px, 0px);
+  }
+
+  100% {
+    transform: translate3d(14px, 0px, 0px);
+  }
 }
 
 .de-active {
