--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a.main-link.special.w--current::before {
   left: 20%;
 }
 
-.active {
+.lang-indicator.active {
   animation-name: toggle-lang-it;
   animation-duration: .2s;
   animation-timing-function: ease-in-out;
