--- a/style.css
+++ b/style.css
@@ -47,7 +47,17 @@ a.main-link.special.w--current::before {
   }
 }
 
-.de-active {
-  transform: translate3d(0px, 0px, 0px);
+@keyframes toggle-lang-en {
+  0% {
+    transform: translate3d(14px, 0px, 0px);
+  }
+
+  100% {
+    transform: translate3d(0px, 0px, 0px);
+  }
+}
+
+.lang-indicator.de-active {
+  animation: toggle-lang-en .2s ease-in-out forwards !important;
   transform-style: preserve-3d;
 }
