--- a/utils/toggle-anim.css
+++ b/utils/toggle-anim.css
@@ -201,9 +201,10 @@
   height: 2px;
   border-radius: 0%;
   top: 48%;
-  animation: close-elem-6 4s ease-in-out infinite;
+  /* animation: close-elem-6 4s ease-in-out infinite;  */
 }
 
+/*
 @keyframes close-elem-6 {
   0% {
     transform: rotate(-20deg);
@@ -217,5 +218,7 @@
     transform: rotate(-20deg);
   }
 }
+
+*/
 
 /* Animazione cornice offcanvas */
