--- a/utils/toggle-anim.css
+++ b/utils/toggle-anim.css
@@ -202,7 +202,6 @@
   border-radius: 0%;
   top: 48%;
   transform: rotate(-20deg);
-  /* animation: close-elem-6 4s ease-in-out infinite;  */
 }
 
 .close-elem._7 {
@@ -217,21 +216,32 @@
   transform: rotate(20deg);
 }
 
-/*
+.close-elem._6.close-active-sei {
+  animation: close-elem-6 0.2s ease-in-out forwards;
+}
+
+
 @keyframes close-elem-6 {
   0% {
     transform: rotate(-20deg);
   }
 
-  50% {
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.close-elem._7.close-active-sette {
+  animation: close-elem-7 0.2s ease-in-out forwards;
+}
+
+
+@keyframes close-elem-7 {
+  0% {
     transform: rotate(20deg);
   }
 
   100% {
-    transform: rotate(-20deg);
+    transform: rotate(0deg);
   }
 }
-
-*/
-
-/* Animazione cornice offcanvas */
