--- a/utils/toggle-anim.css
+++ b/utils/toggle-anim.css
@@ -232,7 +232,7 @@
 }
 
 .close-elem._7.close-active-sette {
-  animation: close-elem-7 0.2s ease-in-out forwards;
+  animation: close-elem-7 0.2s ease-out forwards;
 }
 
 
